tests/ui/diagnostic-not-implemented-unaligned.nightly.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::Unaligned` is not satisfied
  --> $DIR/diagnostic-not-implemented-unaligned.rs:17:23
   |
17 |     takes_unaligned::<NotZerocopy>();
   |                       ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `zerocopy::Unaligned` is not implemented for `NotZerocopy`
  --> $DIR/../include.rs:15:5
   |
15 |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(Unaligned)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::Unaligned`:
             ()
             AtomicBool
             AtomicI8
             AtomicU8
             Cell<T>
             F32<O>
             F64<O>
             I128<O>
           and 26 others
note: required by a bound in `takes_unaligned`
  --> $DIR/diagnostic-not-implemented-unaligned.rs:21:23
   |
21 | fn takes_unaligned<T: Unaligned>() {}
   |                       ^^^^^^^^^ required by this bound in `takes_unaligned`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
